Alignment and editor positioning corrections for multipart templates
When source template has fragments and some hidden(or height 0)
the alignment calculation and positioning of editor were going wrong.

Example articles: Tasmanian Devil (en->he), Samuel L. Jackson (en->*)

--- a/modules/ui/styles/mw.cx.ui.TranslationView.less
+++ b/modules/ui/styles/mw.cx.ui.TranslationView.less
@@ -19,6 +19,8 @@
 		}
 
 		& > p,
+		& > table,
+		& > figure,
 		& > pre,
 		& > div,
 		& > ul {
